Alterações em Cards e dados de retorno com JS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/scripts.js" defer></script>
+  <script src="js/dados.js" defer></script>
   <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/323/323308.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
